Tue Nov 14 17:17:53 PST 2000	Michael Jennings <mej@eterm.org>

	Since someone wanted it, if no name is given but an exec line (the -e
	option) is given, the name defaults to the first word in the exec line
	instead of "Eterm-<version>".  For example, Eterm -e ssh foo would get
	the title "ssh".  NOTE:  Most Eterm themes already specify a name, so
	this will not work with those themes.
	
-------------------------------------------------------------------------------
Wed Nov 15 14:20:13 PST 2000	Michael Jennings <mej@eterm.org>

	As requested by Chris Morton <chris.morton@ericsson.com>, I added
	support for the SunCut, SunCopy, SunPaste, and SunFront keys.  The 1st
	3 operate on the xclipboard-managed "ClipBoard" buffer.  The SunFront
	key will activate Eterm's "steal focus" mechanism.
	
-------------------------------------------------------------------------------
Thu Nov 16 16:40:54 PST 2000	Michael Jennings <mej@eterm.org>

	VA bought some licenses for Insure++, so I've been using it to audit
	Eterm.  These are just the initial results of the collaboration; there
	will most likely be more.  So far things are looking pretty good.  I
	just wish Insure++ had more helpful messages.  I'd really love to be
	able to track down those reads/writes involving freed pointers that
	it claims to have found in Imlib2....

	I also had to try and make the build work without MMX.  I did so; I
	just hope it still works *with* MMX.... =)
	
-------------------------------------------------------------------------------
Thu Nov 16 16:20:19 PST 2000	Michael Jennings <mej@eterm.org>

	Well, it would've worked just fine if not for a stupid typo. =P
	
-------------------------------------------------------------------------------
Thu Nov 16 16:27:09 PST 2000	Michael Jennings <mej@eterm.org>

	This time it really works.  No, I mean it this time.  Seriously.
	
-------------------------------------------------------------------------------